--- a/style.css
+++ b/style.css
@@ -15,30 +15,74 @@ html{
 }
 
 p {
-    color :black
+    color :rgb(85, 85, 85);
 }
 
 /* TRANSITION */
 
-a, .btn {
+a,
+.btn {
     transition:  all 300ms ease;
 }
 
 /* DESKTOP NAV */
 
-nav, .navlinks {
+nav,
+.nav-links {
     display: flex ;
 
 }
 
-nav{
+nav {
     justify-content: space-around;
     align-items: center;
     height: 17vh;
 }
 
-.navlinks{
+.nav-links{
     gap: 2rem;
     list-style: none;
-    text-decoration: white;
+    font-size: 1.5rem;
+}
+
+a{
+    color: black;
+    text-decoration: none;
+    text-decoration-color: white;
+}
+
+a:hover{
+    color: rgb(38, 37, 37);
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: rgb(181,181,181);
+}
+
+.logo{
+    font-size: 2rem;
+}
+
+.logo:hover {
+    cursor: default;
+}
+
+
+/* HAMBURGER */
+
+#hamburger-nav{
+    display: none;
+}
+
+.hamburger-menu{
+    position: relative;
+    display: inline-block;
+}
+
+.hamburger-icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
 }
