--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ nav,
 nav {
     justify-content: space-around;
     align-items: center;
-    height: 17vh;
+    height: 18vh;
+    background-color: rgb(96, 96, 96);
 }
 
 .nav-links{
@@ -178,8 +179,7 @@ section{
    
 }
 .Section__pic-container img {
-    width: 150px;
-    height: 150px;
+
     border-radius: 50%;
     object-fit: cover;
     border: 4px solid #333;
@@ -199,5 +199,56 @@ section{
 }
 
 .section_text_p1{
-    text-align: center;
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
 }
+
+.title{
+    font-size: 3rem;
+    text-align: center
+}
+
+#socials-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap:1rem;
+}
+
+/* icon */
+
+.icon{
+    cursor: pointer;
+    height: 2rem;
+}
+
+/* buttons */
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn{
+    margin-top: 1vh;
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+    background: rgb(53,53,53); 
+    color: white; 
+}
+
+.btn-color-1{
+    border: rgb(53,53,53) 0.1rem solid;
+}
+
+
+.btn-color-1:hover{
+   cursor: pointer; 
+   background: white;
+   color:rgb(0,0,0);
+}
+
