--- a/style.css
+++ b/style.css
@@ -279,3 +279,66 @@ section{
   #about-section p {
     margin-bottom: 1.5rem;
   }
+
+  /* contact */
+
+  #contact-section{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+  }
+
+  .contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163,163,163);
+    background: (250,250,250);
+    margin:2rem auto;
+    padding: 0.5rem;
+  }
+
+  .contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+  }
+  .contact-info-container p{
+    font-size: larger;
+  }
+
+  .contact-icon{
+    cursor: default;
+  }
+
+  .email-icon{
+    height: 2.5rem;
+  }
+
+  /* footer */
+  footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+  }
+  
+  footer a {
+    color: #1e90ff; /* A nice blue color for the link */
+    text-decoration: none;
+  }
+  
+  footer a:hover {
+    text-decoration: underline;
+  }
+  
+  .footer-content {
+    margin: 0;
+    padding: 0;
+  }
+  
