--- a/style.css
+++ b/style.css
@@ -234,15 +234,15 @@ section{
     margin-top: 1vh;
     font-weight: 600;
     transition: all 300ms ease;
-    padding: 1.5rem;
-    width: 14rem;
+    padding: 1rem;
+    width: 8rem;
     border-radius: 2rem;
     background: rgb(53,53,53); 
     color: white; 
 }
 
 .btn-color-1{
-    font-size:medium;
+    /* font-size:medium; */
     border: rgb(53,53,53) 0.1rem solid;
 }
 
